added full text queries for title
