# src/main/kotlin/com/htwk/musikdatenbank/entities/title/TitleController.kt
@@ -5,6 +5,7 @@ import org.mapstruct.factory.Mappers
 import org.openapitools.api.TitleApi
 import org.openapitools.model.TitleView
 import org.springframework.http.ResponseEntity
+import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
@@ -15,6 +16,12 @@ class TitleController(
 
     override fun getTitles(): ResponseEntity<List<TitleView>> {
         val titles = musicService.getAllTitles().map { converter.convertToView(it) }.toList()
+
+        return ResponseEntity.ok(titles)
+    }
+
+    override fun searchTitles(keyword: String?): ResponseEntity<List<TitleView>> {
+        val titles = musicService.searchTitle(keyword).map { converter.convertToView(it) }.toList()
 
         return ResponseEntity.ok(titles)
     }
