# src/main/resources/api.yml
@@ -183,6 +183,28 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/TitleView'
+  /title/search:
+    get:
+      summary: Returns titles matched against keyword
+      operationId: searchTitles
+      tags:
+        - title-controller
+      parameters:
+        - name: keyword
+          in: query
+          required: false
+          schema:
+            type: string
+          description: the term you want to search for
+      responses:
+        200:
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TitleView'
   /artist-title-link:
     get:
       summary: Returns the composer of tile
